Blazor라는 이름으로 리뉴얼 및 대폭 버전 업, DB를 안쓰는 샘플로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,6 @@ FodyWeavers.xsd
 # Team
 /.idea
 !/.idea/.idea.K1Server/.idea/dataSources.xml
+
+# private properties
+tools/LocalServerManager/dist
